# wasm-bindgen-recursive-use-error

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs
www/: index.html
